--- a/hw3-submission/Homework-3.ipynb
+++ b/hw3-submission/Homework-3.ipynb
@@ -478,7 +478,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Above I'm extracting all the review data for Omni Parker Hotel. First I'm getting the tourism page of boston from there I'm getting the Hotel page followed by the Omni Parker Hotel Page. From the hotel page I'm collecting all the URL for every different review and passing it to a function which will get the review page and using Beautifulsoup it will extract the review Id and the ratings the user has given for all the reviews. Here I'm just taking the rating for 6 attributes, namely Rooms, Location, Value, Sleep Quality, Cleanliness and Service. I'm writing this data to a text file named \"reviews.txt\" from which I'll read latter to calculate the average ratings for this hotel, which I have uploaded as well.\n"
+    "Above I'm extracting all the review data for Omni Parker Hotel. First I'm getting the tourism page of boston from there I'm getting the Hotel page followed by the Omni Parker Hotel Page. From the hotel page I'm collecting all the URL for every different review and passing it to a function which will get the review page and using Beautifulsoup it will extract the review Id and the ratings the user has given for all the reviews. Here I'm just taking the rating for 6 attributes, namely Rooms, Location, Value, Sleep Quality, Cleanliness and Service. I'm writing this data to a text file named \"reviews.txt\" from which I'll read latter to calculate the average ratings for this hotel, which I have uploaded as well. Above you can see the log entry of the data being scraped, the complete log will not print here as it is too long. The data file attached has all the reviews scraped.\n"
    ]
   },
   {
@@ -1836,7 +1836,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Above I'm extracting data for all the hotels in Boston, MA. Using the same basic fuctions I'm getting the tourism page followed by the hotel list page. Here I'm extracting all the URLs for all the different 82 hotels and passing it to a function which in turn uses BeautifulSoup to extract data from the hotel page. I'm extracting the number of different types ratings like excellent, very good, average, poor and terrible. I'm also extracting the number of different review caterogie like family, couple, Solo, Business and friends. I'm calculating the average traveller's rating and writing all of this data to a file called \"boston.txt\" which I've uploaded as well."
+    "Above I'm extracting data for all the hotels in Boston, MA. Using the same basic fuctions I'm getting the tourism page followed by the hotel list page. Here I'm extracting all the URLs for all the different 82 hotels and passing it to a function which in turn uses BeautifulSoup to extract data from the hotel page. I'm extracting the number of different types ratings like excellent, very good, average, poor and terrible. I'm also extracting the number of different review caterogie like family, couple, Solo, Business and friends. I'm calculating the average traveller's rating and writing all of this data to a file called \"boston.txt\" which I've uploaded as well. Above is the log of the running code, the last line tells us that we have recahed the last page. "
    ]
   },
   {
