--- a/hw4-submission/Homework-4.ipynb
+++ b/hw4-submission/Homework-4.ipynb
@@ -223,19 +223,22 @@
     "ic=0\n",
     "\n",
     "for line in readJson('train.json'):\n",
-    "    user,item,overall= line['reviewerID'],line['asin'],line['overall']\n",
-    "    train =[user,item,overall]\n",
+    "    user,item,stars= line['reviewerID'],line['asin'],line['overall']\n",
+    "    train =[user,item,stars]\n",
     "    allRatings.append(train)\n",
     "\n",
     "review = pd.DataFrame(allRatings, columns = ['UserID','ItemID','Stars'])\n",
     "\n",
+    "# initially taking random values for the biases and P and Q\n",
     "k=12\n",
     "userbais = np.random.rand(len(review.UserID.unique()))\n",
     "itembais = np.random.rand(len(review.ItemID.unique()))\n",
     "P = np.random.rand(len(review.UserID.unique()),k)\n",
     "Q = np.random.rand(len(review.ItemID.unique()),k)\n",
     "Q = Q.T\n",
+    "\n",
     "Lamda = 1 \n",
+    "\n",
     "LRate = 0.05\n",
     "\n",
     "for userID in review.UserID.unique():\n",
@@ -259,6 +262,7 @@
     "        itembais[ItemID] += (LRate*(Error-(Lamda*itembais[ItemID])))\n",
     "        q = Q[:,ItemID]+(LRate*(Error*P[UserID,:]-Lamda*Q[:,ItemID]))\n",
     "        p = P[UserID,:]+(LRate*(Error*Q[:,ItemID]-Lamda*P[UserID,:]))\n",
+    "        # to store the old value\n",
     "        Q[:,ItemID]=q\n",
     "        P[UserID,:]=p\n",
     "\n",
@@ -292,9 +296,9 @@
     "userAverage = {}\n",
     "itemAverage = {}\n",
     "for u in userRatings:\n",
-    "  userAverage[u] = sum(userRatings[u]) / len(userRatings[u])\n",
+    "    userAverage[u] = sum(userRatings[u]) / len(userRatings[u])\n",
     "for v in itemRatings:\n",
-    "  itemAverage[v] = sum(itemRatings[v]) / len(itemRatings[v])\n",
+    "    itemAverage[v] = sum(itemRatings[v]) / len(itemRatings[v])\n",
     "\n",
     "predictions = open(\"predictions_Rating.txt\", 'w')\n",
     "for l in open(\"pairs_Rating.txt\"):\n",
